--- a/MetroEngine/MetroEngine/MetroEngine.csproj
+++ b/MetroEngine/MetroEngine/MetroEngine.csproj
@@ -57,6 +57,7 @@
     <Compile Include="GameObjects\Component.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Transform.cs" />
+    <Compile Include="Inputs\Class1.cs" />
     <Compile Include="LogicLoop\LogicLoop.cs" />
     <Compile Include="GameObjects\Components\PhysicsComponent.cs" />
     <Compile Include="GameObjects\Components\UpdateComponent.cs" />
