--- a/MetroEngine/MetroEngine/MetroEngine.csproj
+++ b/MetroEngine/MetroEngine/MetroEngine.csproj
@@ -56,8 +56,8 @@
     <Compile Include="GameObjects\Component.cs" />
     <Compile Include="GameObjects\GameObject.cs" />
     <Compile Include="GameObjects\Transform.cs" />
+    <Compile Include="Inputs\InputKeys.cs" />
     <Compile Include="Inputs\InputManager.cs" />
-    <Compile Include="Inputs\Keys.cs" />
     <Compile Include="LogicLoop\LogicLoop.cs" />
     <Compile Include="GameObjects\Components\PhysicsComponent.cs" />
     <Compile Include="GameObjects\Components\UpdateComponent.cs" />
