--- a/MetroEngine/MetroEngine/MetroEngine.csproj
+++ b/MetroEngine/MetroEngine/MetroEngine.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DrawLoop\" />
+    <Folder Include="Scripting\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
