--- a/MetroEngine/MetroEngine/MetroEngine.csproj
+++ b/MetroEngine/MetroEngine/MetroEngine.csproj
@@ -84,7 +84,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <!--<Compile Include="Program.cs" />-->
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
